# fst_spec

./: .gitignore  README.md  index.adoc  index.html  style.css
sample_code/: .gitignore  README.md  parse_blocks.py  pyproject.toml
sample_code/block/: blackout.py  common.py  geom.py  hdr.py  hier_data.py  vcdata.py
sample_code/sample_fst/: synthetic.fst
sample_code/src/fst_reference/: parse_blocks.py
sample_code/src/fst_reference/block/: blackout.py  common.py  geom.py  handlers.py  hdr.py  hier.py  hier_data.py  vcdata.py
