[project]
name = "fst_reference"
version = "0.1.0"
requires-python = ">=3.12"
description = "Sample code to decode FST wave files"
readme = "README.md"
dependencies = [
    "lz4 >=4, <5",
    "fastlz == 0.0.1"
]

[project.scripts]
parse_blocks = "fst_reference.parse_blocks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

# Run `uv run --with pylint -- pylint src` to check code.
[tool.pylint.'MAIN']
py-version = "3.12.0"
disable= [
    # Allow 'TODO:' in code.
    "fixme",
    # Overly zealous duplicate code detection.
    "duplicate-code",
    # These debatable style lints are quite annoying, and often push
    # you into mixing up small changes (adding one statement to a function)
    # with large refactors (splitting the function up into shorter functions).
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    # Handled by Ruff.
    "line-too-long",
]
